deploy: ca7a25133ef03a61dcab4a763d684fcc37f1aa90

--- a/casbin/emitter/trait.EventEmitter.html
+++ b/casbin/emitter/trait.EventEmitter.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta http-equiv="refresh" content="0;URL=../../casbin/trait.EventEmitter.html">
+    <meta http-equiv="refresh" content="0;URL=../../casbin/prelude/trait.EventEmitter.html">
 </head>
 <body>
-    <p>Redirecting to <a href="../../casbin/trait.EventEmitter.html">../../casbin/trait.EventEmitter.html</a>...</p>
-    <script>location.replace("../../casbin/trait.EventEmitter.html" + location.search + location.hash);</script>
+    <p>Redirecting to <a href="../../casbin/prelude/trait.EventEmitter.html">../../casbin/prelude/trait.EventEmitter.html</a>...</p>
+    <script>location.replace("../../casbin/prelude/trait.EventEmitter.html" + location.search + location.hash);</script>
 </body>
 </html>
