deploy: d546e616909f65238d9657897bdbacbf3b995ca8

--- a/casbin/rhai/index.html
+++ b/casbin/rhai/index.html
@@ -30,6 +30,7 @@ and/or script-defined functions.</p>
 </td></tr><tr class='module-item'><td><a class="struct" href="struct.Position.html" title='casbin::rhai::Position struct'>Position</a></td><td class='docblock-short'><p>A location (line number + character position) in the input script.</p>
 </td></tr><tr class='module-item'><td><a class="struct" href="struct.Scope.html" title='casbin::rhai::Scope struct'>Scope</a></td><td class='docblock-short'><p>Type containing information about the current scope.
 Useful for keeping state between <a href="../../casbin/rhai/struct.Engine.html" title="crate::Engine"><code>Engine</code></a> evaluation runs.</p>
+</td></tr><tr class='module-item'><td><a class="struct" href="struct.ScriptFnMetadata.html" title='casbin::rhai::ScriptFnMetadata struct'>ScriptFnMetadata</a></td><td class='docblock-short'><p>A type containing the metadata of a script-defined function.</p>
 </td></tr></table><h2 id='enums' class='section-header'><a href="#enums">Enums</a></h2>
 <table><tr class='module-item'><td><a class="enum" href="enum.EvalAltResult.html" title='casbin::rhai::EvalAltResult enum'>EvalAltResult</a></td><td class='docblock-short'><p>Evaluation result.</p>
 </td></tr><tr class='module-item'><td><a class="enum" href="enum.FnAccess.html" title='casbin::rhai::FnAccess enum'>FnAccess</a></td><td class='docblock-short'><p>A type representing the access mode of a function.</p>
